[workspace]
resolver = "2"

members = ["example-service", "tarpc", "plugins"]

[workspace.dependencies]
opentelemetry = { version = "0.21.0" }
opentelemetry-jaeger = { version = "0.20", features = ["rt-tokio"] }
opentelemetry_sdk = { version = "0.21.0", default-features = false, features = [
    "rt-tokio",
] }
tracing-opentelemetry = { version = "0.22.0", default-features = false }

[profile.dev]
split-debuginfo = "unpacked"
